--- a/PowerPack/v.01/PowerPack/src/PowerPack/com/panel/graphsClasses/GraphThumb.mxml
+++ b/PowerPack/v.01/PowerPack/src/PowerPack/com/panel/graphsClasses/GraphThumb.mxml
@@ -3,35 +3,127 @@
 	horizontalAlign="center" 
 	verticalAlign="middle" 
 	borderStyle="none" 
-	width="40"
+	height="60"
 	backgroundAlpha="0.0">
 	
+	<mx:Style>
+        .labelTextStyleName, .inputTextStyleName { 
+            fontFamily: Arial;
+            fontSize: 12; 
+            fontWeight: normal
+        }
+    </mx:Style>
+    
     <mx:Script>
         <![CDATA[
+        	import mx.binding.utils.ChangeWatcher;
+        	import mx.binding.utils.BindingUtils;
+        	import mx.core.EdgeMetrics;
         	import mx.core.UITextField;
         	import mx.core.IUITextField;           
+           
             // Define a property for returning the new value to the item.
             [Bindable]
             public var returnText:String;
             
             public var labelTextField:IUITextField;
             
+            private var watcher:ChangeWatcher;
+		    
+		    //--------------------------------------------------------------------------
+			//
+			//  Properties
+			//
+			//--------------------------------------------------------------------------
+		
+		    //----------------------------------
+		    //  editable
+		    //----------------------------------
+		    
+		    private var _editable:Boolean;
+		    
+		    [Bindable ("editableChange")]
+		    public function set editable(value:Boolean):void
+		    {
+		    	if(_editable!=value)
+		    	{
+		    		_editable = value;
+		    		
+		    		if(_editable)
+		    		{
+						labelTextField.visible = false;
+						labelTextField.includeInLayout = false;
+				
+						txtThumb.visible = true;
+						txtThumb.includeInLayout = true;
+						
+						setStyle("paddingTop", getStyle("paddingTop")+2);
+		    		}
+		    		else
+		    		{
+						txtThumb.includeInLayout = false;
+		    			txtThumb.visible = false;
+						
+						labelTextField.visible = true;
+						labelTextField.includeInLayout = true;
+
+						setStyle("paddingTop", getStyle("paddingTop")-2);
+		    		}
+		    		
+		    		invalidateProperties();
+		    		invalidateDisplayList();
+
+		    		dispatchEvent(new Event("editableChange"));
+		    	}
+		    }
+		    public function get editable():Boolean
+		    {
+		    	return _editable;	
+		    }
+		    
+			//--------------------------------------------------------------------------
+			//
+			//  Overridden methods
+			//
+			//--------------------------------------------------------------------------
+					                
 			override protected function createChildren():void
 			{
        			super.createChildren();
        			
        			if (!labelTextField)
 			    {
-			    	setStyle("fontFamily", "Arial");
-			    	setStyle("fontSize", "11");
-			    	setStyle("fontWeight", "normal");
 			        labelTextField = IUITextField(createInFontContext(UITextField));
 			        labelTextField.text = txtThumb.text;
-			        //labelTextField.styleName = getStyle("labelTextStyleName");
+			        labelTextField.styleName = getStyle("labelTextStyleName");
 			        labelTextField.enabled = true;
-			        
-			        cnvs.addChildAt(DisplayObject(labelTextField), 0);
+					labelTextField.visible = true;
+					labelTextField.includeInLayout = true;
+					
+			        addChild(DisplayObject(labelTextField));
 		    	}
+				
+				BindingUtils.bindSetter(onDataChange, this, 'data');
+					
+				function onDataChange(data:Object):void {
+					if(data)
+					{
+						if(watcher)
+							watcher.unwatch();
+						watcher = BindingUtils.bindSetter(onLabelChange, data, 'name');							
+					}
+					else
+					{
+						txtThumb.text = '';
+						invalidateDisplayList();	
+					}
+				}
+				
+				function onLabelChange(label:String):void {
+					txtThumb.text = label;
+					invalidateDisplayList();
+				}
+									        
    			}    
    			
 		    /**
@@ -40,28 +132,37 @@
 			override protected function updateDisplayList(unscaledWidth:Number,
 														  unscaledHeight:Number):void
 			{
-				super.updateDisplayList(unscaledWidth, unscaledHeight);
+				var edges:EdgeMetrics = viewMetricsAndPadding;
+				var contentAreaWidth:int = width - edges.left - edges.right; 
+				var labelWidth:int = contentAreaWidth-6;
 				
-				var lblWidth:int = cnvs.width - cnvs.getStyle('paddingLeft') - cnvs.getStyle('paddingRight') - 10;
-				labelTextField.text = txtThumb.text;
-				labelTextField.width = lblWidth;
-				
-				if(labelTextField.textWidth>lblWidth) {
-					labelTextField.truncateToFit("...");
+				if(editable)
+				{
+					txtThumb.width = labelWidth;
+					txtThumb.x = 3;
+				}
+				else
+				{
+					labelTextField.text = txtThumb.text;
+					labelTextField.width = labelWidth;
+					
+					labelTextField.x = 3;
+					
+					if(labelTextField.textWidth>labelWidth) {
+						labelTextField.truncateToFit("...");
+					}
 				}
 
-				cnvs.validateNow();
+				super.updateDisplayList(unscaledWidth, unscaledHeight);
 			}   			        
         ]]>
     </mx:Script>
     
 	<mx:Image id="imgThumb" scaleContent="true" autoLoad="true" source="@Embed('../../../../../resources/tree.png')" width="24" height="24"/>
 	
-	<mx:Canvas id="cnvs" width="99%">
-		<mx:TextInput id="txtThumb" fontFamily="Arial" fontSize="11" fontWeight="normal"
-			text="{data.name}" textAlign="center" width="100%" visible="false" horizontalCenter="0" 
-			change="returnText=txtThumb.text;"
-			updateComplete="returnText=txtThumb.text;" />
-	</mx:Canvas>
+	<mx:TextInput id="txtThumb" 
+		styleName="inputTextStyleName" textAlign="center" visible="false" includeInLayout="false"
+		change="returnText=txtThumb.text;"
+		updateComplete="returnText=txtThumb.text;" />
 	
 </mx:VBox>
