git-svn-id: http://svn.vdombox.ru/flextools/trunk@3364 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/PowerPack/src/PowerPack/com/dialog/TemplateProperties.mxml
+++ b/PowerPack/v.01/PowerPack/src/PowerPack/com/dialog/TemplateProperties.mxml
@@ -9,7 +9,7 @@
 	
 	<mx:Script>
 		<![CDATA[
-			import PowerPack.com.gen.structs.TemplateStruct;
+			import PowerPack.com.Template;
 			import mx.events.CloseEvent;
 			import mx.utils.StringUtil;
 			import PowerPack.com.managers.ContextManager;
@@ -46,7 +46,7 @@
 			
 			private function onShow(event:Event):void
 			{            	
-            	var tpl:TemplateStruct = ContextManager.instance.templates.getItemAt(0) as TemplateStruct; 
+            	var tpl:Template = ContextManager.instance.templates.getItemAt(0) as Template; 
 				
 				if(tpl.picture || tpl.picturePath)
 				{
@@ -95,7 +95,7 @@
 			
 			private function removePicture():void
 			{
-				var tpl:TemplateStruct = ContextManager.instance.templates.getItemAt(0) as TemplateStruct;
+				var tpl:Template = ContextManager.instance.templates.getItemAt(0) as Template;
 				
 				gridRemovePic.visible = false;
 				gridRemovePic.includeInLayout = false;
