--- a/PowerPack/v.01/PowerPack/src/PowerPack/com/dialog/ImportFromTpl.mxml
+++ b/PowerPack/v.01/PowerPack/src/PowerPack/com/dialog/ImportFromTpl.mxml
@@ -9,6 +9,7 @@
 	
 	<mx:Script>
 		<![CDATA[
+			import PowerPack.com.Template;
 			import ExtendedAPI.com.containers.SuperAlert;
 			import mx.collections.SortField;
 			import mx.collections.Sort;
@@ -16,7 +17,6 @@
 			import PowerPack.com.graph.GraphCanvas;
 			import mx.collections.XMLListCollection;
 			import mx.controls.Alert;
-			import PowerPack.com.gen.structs.TemplateStruct;
 			import PowerPack.com.managers.ProgressManager;
 			import mx.events.CloseEvent;
 			import mx.utils.StringUtil;
@@ -49,7 +49,7 @@
 				return _dialog;
 			}
 			
-			public var template:TemplateStruct;
+			public var template:Template;
 			private var filterArray:Array = 
 				[
 					new FileFilter(
@@ -122,7 +122,7 @@
         		
 				fileStream.close();
 				
-				template = new TemplateStruct(xml);
+				template = new Template(xml);
 				
 				if(template.isEncoded)
 				{
