--- a/IDE/Vdom/vdom/components/scriptEditor/scriptEditor2.mxml
+++ b/IDE/Vdom/vdom/components/scriptEditor/scriptEditor2.mxml
@@ -38,12 +38,14 @@
 //	 			trContainer.addEventListener(EventEditorEvent.DATA_CHANGED, dataChangedListener);
 	 			
 	 			curContainerID = dataManager.currentPageId;
+	 			if(curContainerID)
 	 			curContainerTypeID = dataManager.getTypeByObjectId(curContainerID).Information.ID.toString();
 	 			
 	 			dataManager.addEventListener(DataManagerEvent.PAGE_CHANGED, pageChangeHandler);
 	 			
 	 			
 	 			arrAppl = [];
+	 			arrAppl.push({label:"Server Actions", ID:"session"});
 	 			for each(var lavel:XML in dataManager.listPages )
 				{
 		 			var ID:String = lavel.@ID;
@@ -191,7 +193,10 @@
 			{
 				selectedAppl = ComboBox(obj).selectedItem;
 //				changeTree(selectedAppl.ID);
-				dataManager.changeCurrentPage(selectedAppl.ID);
+				if(selectedAppl.ID == "session")
+					serverScripts.dataProvider = selectedAppl.ID
+				else
+					dataManager.changeCurrentPage(selectedAppl.ID);
 			}
 			
 	]]>
@@ -199,20 +204,21 @@
 	<mx:HDividedBox width="100%" height="100%">
         <mx:VBox id="vBox" width="100%" height="100%" >
             <containers:TabbedTextArea id="textArea" width="100%"  height="100%"
-            		 text="same Text of code" 
+            		 text="same Text of code"  color="#010F90"
             		 allowTabKey="true"
-            		 keyDown=" textAreaDataChangeHandler( event ); "/>            	 
+            		 keyDown=" textAreaDataChangeHandler( event ); " backgroundColor="#FBECFC"/>            	 
             <mx:HBox>
 	           <mx:Button id="btSave" label="Save" click=" save(); " />
 	           <mx:Button label="Revert" click=" revert(); "/>
             </mx:HBox>
         </mx:VBox>
-        <mx:VBox width="250" height="100%"
-        	verticalScrollPolicy="auto" horizontalScrollPolicy="off"   verticalGap="10"  top="10" 
+        <mx:VBox width="250" height="100%" minWidth="250"
+        	verticalScrollPolicy="auto" horizontalScrollPolicy="off"   verticalGap="10"  
         	paddingLeft="3" paddingRight="10" paddingTop="10">
-        	<mx:Panel title="PAGES" width="100%" color="#FFFFFF">
-			        <mx:ComboBox id="changeContainer" dataProvider="{arrAppl}"  rowCount="20" change="{changeContainerHandler(event.target)}" 
-			        		color="#000000" width="100%"/>
+        	<mx:Panel title="PAGES" width="100%" color="#FFFFFF" >
+			        <mx:ComboBox id="changeContainer" dataProvider="{arrAppl}"
+			        	 rowCount="20" change="{changeContainerHandler(event.target)}" 
+			        		color="#000000" minWidth="200" width="100%" />
 	        </mx:Panel>
 			
 				       <containers:ServerScripts  id="serverScripts"  title="serverScripts" width="100%" dataChanged="{setScript()}" />
