--- a/IDE/Vdom/vdom/components/eventEditor/EventEditor.mxml
+++ b/IDE/Vdom/vdom/components/eventEditor/EventEditor.mxml
@@ -109,7 +109,11 @@
 				{
 		 			var ID:String = lavel.@ID;
 		 			var strLabel:String =  lavel.Attributes.Attribute.(@Name == "title");
-		 			arrAppl.push({label:strLabel, ID:ID});
+		 			
+		 			var typeID:String = lavel.@Type.toString();
+		 			var iconResID:String = getIcon(typeID);
+		 			
+		 			arrAppl.push({label:strLabel, ID:ID, iconResID:iconResID});
 				}
 				
 				function searchIndex():int
@@ -141,6 +145,23 @@
 				
 				
 	 		}
+	 		
+	 		private var massIconResouceID:Array = new Array(); 
+			private function getIcon(ID:String):String
+			{
+				if (massIconResouceID[ID])
+					return massIconResouceID[ID];
+					
+				for each(var lavel:XML in dataManager.getTopLevelTypes() )
+				{																//2330fe83-8cd6-4ed5-907d-11874e7ebcf4 /#Lang(001)
+						if( lavel.Information.ID == ID) 
+						{
+							var strLabel:String = lavel.Information.StructureIcon;
+							return  massIconResouceID[ID] = strLabel.substr(5, 36);
+						}
+				}
+				return  '';
+			}
 	 		
 	 		private function hideHandler():void
 	 		{
@@ -982,22 +1003,24 @@
 	          </mx:Canvas>
 		</mx:VDividedBox>
 		-->
-        <mx:VBox id="vBox" width="100%" height="100%"  >
+        <mx:VBox id="vBox" width="100%" height="100%"  paddingLeft="10" paddingTop="10">
             <mx:Canvas id="can" width="100%" height="100%"
-            		backgroundColor="#E1E1E1"
+            		backgroundColor="#7B7B7B"
             	 	dragEnter="dragEnterHandler(event);" 
     				dragDrop="dragDropHandler(event);" borderColor="#DFDFDF"/>
-             <mx:HBox>
+             <mx:HBox paddingBottom="10" >
             	<mx:Button id="btSave" label="Save" click="{creatDataToServer()}"/>
 	            <mx:Button label="Revert" click="{revert()}"/>
             </mx:HBox>
         </mx:VBox>
-	        <mx:VBox  width="250" height="{can.height}" verticalGap="10"   paddingLeft="3" paddingRight="10" paddingTop="10"
+	        <mx:VBox  width="250" height="{can.height + 30}"  minWidth="250"
+	        	verticalGap="10"   paddingLeft="3" paddingRight="10" paddingTop="10"
 	        		verticalScrollPolicy="auto" horizontalScrollPolicy="off"  >
-	        	<mx:Panel title="PAGES" width="100%" color="#FFFFFF">
-			        <mx:ComboBox id="changeContainer" dataProvider="{arrAppl}"  rowCount="20" 
-			        	change="{changeContainerHandler(event.target)}" 	color="#000000" width="100%"/>
-	        	</mx:Panel>
+			        <mx:Panel title="PAGES" width="100%" color="#FFFFFF" >
+				        <mx:ComboBox id="changeContainer" dataProvider="{arrAppl}"
+			        	 rowCount="20" change="{changeContainerHandler(event.target)}"   
+			        		color="#000000" minWidth="200" width="100%" itemRenderer="vdom.components.eventEditor.PanelItemRender"/>
+	       			 </mx:Panel>
 		        <eventEditor:ContainersBranch id="containersBranch" width="100%"  title="Objects"/>
 		        
 		        <containers:ClosablePanel width="100%"  title="Events" >
