--- a/IDE/Vdom/vdom/components/treeEditor/TreeEditor.mxml
+++ b/IDE/Vdom/vdom/components/treeEditor/TreeEditor.mxml
@@ -183,7 +183,7 @@
 	
 	private var dX:Number;
 	private var dY:Number;
-	private var mainWidth:Button = new Button();
+	private var mainWidth:Canvas = new Canvas();
 	
 	private function startReDrawLineHandler(trEvt:TreeEditorEvent):void
 	{
@@ -196,7 +196,14 @@
 		
 		main.addChild(mainWidth);
 		
-		mainWidth.x = main.width + main.horizontalScrollPosition;
+		mainWidth.x = main.width  - 20;
+		mainWidth.y = main.height - 20;
+		
+		if(main.horizontalScrollPosition)
+			mainWidth.x = mainWidth.x + main.horizontalScrollPosition;
+			
+		if(main.verticalScrollPosition)
+			mainWidth.y = mainWidth.y + main.verticalScrollPosition;
 		
 		Application.application.addEventListener(MouseEvent.MOUSE_MOVE, mouseMoveHandler);
 		Application.application.addEventListener(MouseEvent.MOUSE_UP, 	mouseUpHandler);
@@ -630,7 +637,7 @@
 </mx:Script>
 <mx:HBox width="100%" height="100%" >
 
-<mx:Canvas id="main"   width="100%" height="100%" backgroundColor="#ffffff" >
+<mx:Canvas id="main"   width="100%" height="100%" backgroundColor="#5C5C5C"	 >
 
 <!--
 	<mx:ComboBox x="28" y="46" >
